# webbrowser-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: android.yaml  build-test.yaml  ci.yml  ios.yaml  linux.yaml  macos.yaml  release.yaml  wasm.yaml  windows.yaml
src/: android.rs  common.rs  ios.rs  lib.rs  macos.rs  release.yaml  unix.rs  wasm.rs  windows.rs
tests/: common.rs  test_android.rs  test_ios.rs  test_macos.rs  test_unix.rs  test_wasm.rs  test_windows.rs
tests/test-android-app/: Cargo.toml
tests/test-android-app/src/: lib.rs  main.rs
tests/test-ios-app/: .gitignore
tests/test-ios-app/test-ios-app/: ContentView.swift  Test-Glue-Header.h  TestGlueInterface.swift  test_ios_appApp.swift
tests/test-ios-app/test-ios-app.xcodeproj/: project.pbxproj
tests/test-ios-app/testglue/: Cargo.toml  build
tests/test-ios-app/testglue/src/: lib.rs
tests/test-wasm-app/: Cargo.toml  test.html
tests/test-wasm-app/src/: lib.rs
