[package]
name = "webbrowser"
description = "Open URLs in web browsers available on a platform"
version = "0.6.0"
authors = ["Amod Malviya @amodm"]
documentation = "https://docs.rs/webbrowser"
homepage = "https://github.com/amodm/webbrowser-rs"
repository = "https://github.com/amodm/webbrowser-rs"
readme = "README.md"
keywords = ["webbrowser", "browser"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Window'
]

[features]
wasm-console = ["web-sys/console"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["combaseapi", "objbase", "shellapi", "winerror"] }
widestring = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
ndk-glue = { version = ">= 0.3, <= 0.6" }

[dev-dependencies]
actix-web = "4"
actix-files = "0.6"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
