[package]
name = "webbrowser"
description = "Open URLs in web browsers available on a platform"
version = "1.0.5"
authors = ["Amod Malviya @amodm"]
documentation = "https://docs.rs/webbrowser"
homepage = "https://github.com/amodm/webbrowser-rs"
repository = "https://github.com/amodm/webbrowser-rs"
readme = "README.md"
keywords = ["webbrowser", "browser"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
log = "0.4"
url = "2"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = ['Window']

[features]
hardened = []
disable-wsl = []
wasm-console = ["web-sys/console"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(any(target_os = "ios", target_os = "tvos", target_os = "visionos"))'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSDictionary",
    "NSString",
    "NSURL",
] }

[dev-dependencies]
actix-web = "4"
actix-files = "0.6"
crossbeam-channel = "0.5"
env_logger = "0.9.0"
rand = "0.8"
serial_test = "0.10"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"

[target.'cfg(target_os = "android")'.dev-dependencies]
ndk-glue = { version = ">= 0.3, <= 0.7" }
