[package]
name = "test-android-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_android_app"
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
webbrowser = { path = "../.." }

[package.metadata.android.sdk]
target_sdk_version = 34
