[package]
name = "test-wasm-app"
version = "0.1.0"
authors = ["Amod Malviya <amod@rootnet.in>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[dependencies.webbrowser]
path = "../../"

[dependencies.web-sys]
version = "0.3"
features = [ "console", "Window" ]

[features]
default = ["webbrowser/wasm-console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
